chore(build): update publish task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,6 +17,8 @@
             "type": "process",
             "args": [
                 "publish",
+                "-c",
+                "Release",
                 "${workspaceFolder}/Kite/Kite.csproj"
             ],
             "problemMatcher": "$tsc"
